--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,21 +34,25 @@ android {
 
 dependencies {
 
+    api 'com.google.android.material:material:1.4.0-alpha02'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    def nav_version_ktx = "2.1.0-alpha06"
+  //  def nav_version_ktx = "2.1.0-alpha06"
     //dependencia Kotlin
-    implementation "amdroidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
+   // implementation "amdroidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
+ //   implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
 
-    def material_version = "1.1.0-alpha07"
-    implementation "com.google.android.material:material:$material_version"
+//    def material_version = "1.1.0-alpha07"
+//    implementation "com.google.android.material:material:$material_version"
 }
